# Financial-Data-Analyst-AI-Agent

./: .env  README.md  demo_complete_flow.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  code_executor.py  column_mapper.py  data_processor.py  llm_service.py  response_formatter.py
app/utils/: __init__.py  file_errors.py  file_handler.py
workspace/uploads/746b965f-aa94-4f1f-aeee-7ceac21f7924/: test_enterprise_data.xlsx
