[project]
name = "financial-data-analyst-ai-agent"
version = "0.1.0"
description = "AI-powered financial data analysis agent with flexible CSV/Excel processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core web framework
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "python-multipart>=0.0.6",
    # LLM and AI
    "llama-cpp-python>=0.3.9",
    # Data processing
    "pandas>=2.3.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    # Visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    # ML and analysis
    "scikit-learn>=1.6.0",
    "scipy>=1.13.0",
    # Web and HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    "requests>=2.32.0",
    # Configuration and utilities
    "python-dotenv>=1.1.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # File processing
    "chardet>=5.2.0",
    "python-docx>=1.1.2",
    # Code execution and security
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
    # Async and concurrency
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
